# output-switcher

./: .prettierignore  .prettierrc.yaml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yaml
src/: App.tsx  AppContext.ts  Meter.tsx  ThemeContext.ts  ThemeProvider.tsx  ipc.ts  types.ts  useWindowsAudioState.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ipc/: error.rs  init.rs  mod.rs  sender.rs
src-tauri/src/ipc/audio/: device_changer.rs  mod.rs  notifier.rs
src/pages/: main.css  main.tsx
