[package]
name = "output-switcher"
version = "0.0.0"
description = "OutputSwitcher"
authors = ["fmsyt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
windows-interface = "0.53.0"
tauri-plugin-context-menu = "0.7.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.tauri]
version = "1"
features = [
    "window-set-min-size",
    "window-set-max-size",
    "window-set-size",
    "system-tray",
    "window-set-decorations",
    "window-start-dragging",
    "window-set-always-on-top",
    "shell-open",
]

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Devices_FunctionDiscovery",
    "implement",
]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
